testdata/baselines/reference/submodule/conformance/checkJsdocOnEndOfFile.errors.txt
error TS5055: Cannot write file 'eof.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
eof.js(2,20): error TS2304: Cannot find name 'bad'.


!!! error TS5055: Cannot write file 'eof.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
!!! error TS5102: Option 'outFile' has been removed. Please remove it from your configuration.
==== eof.js (1 errors) ====
    /**
     * @typedef {Array<bad>} Should have error here
                       ~~~
!!! error TS2304: Cannot find name 'bad'.
     */
    